// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AugmentTable > click Avg DPM — reorders by DPM descending 1`] = `
<div>
  <div
    class="card"
  >
    <table>
      <thead>
        <tr>
          <th>
            Augment
          </th>
          <th>
            Rarity
          </th>
          <th
            style="cursor: pointer; user-select: none;"
          >
            Picks
          </th>
          <th
            style="cursor: pointer; user-select: none;"
          >
            Win Rate
          </th>
          <th
            style="cursor: pointer; user-select: none;"
          >
            Avg DPM
             ▼
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            <div
              style="display: flex; align-items: center; gap: 8px;"
            >
              <div
                style="width: 24px; height: 24px; border-radius: 4px; border: 1px solid rgb(240, 180, 41); overflow: hidden; flex-shrink: 0; background: var(--bg-primary); display: inline-flex;"
                title="Gold Rush"
              >
                <img
                  alt="Gold Rush"
                  src="mayhem-asset://augment-icons/2.png"
                  style="width: 100%; height: 100%; object-fit: cover;"
                />
              </div>
              Gold Rush
            </div>
          </td>
          <td
            style="color: rgb(240, 180, 41); font-size: 12px; font-weight: 600;"
          >
            Gold
          </td>
          <td>
            6
          </td>
          <td>
            <div
              style="display: flex; align-items: center; gap: 8px;"
            >
              <div
                style="width: 60px; height: 6px; background: var(--bg-primary); border-radius: 3px; overflow: hidden;"
              >
                <div
                  style="width: 33.33333333333333%; height: 100%; background: var(--red); border-radius: 3px;"
                />
              </div>
              <span
                class="loss"
              >
                33
                %
              </span>
            </div>
          </td>
          <td>
            900
            /min
          </td>
        </tr>
        <tr>
          <td>
            <div
              style="display: flex; align-items: center; gap: 8px;"
            >
              <div
                style="width: 24px; height: 24px; border-radius: 4px; border: 1px solid rgb(192, 192, 192); overflow: hidden; flex-shrink: 0; background: var(--bg-primary); display: inline-flex;"
                title="Iron Will"
              >
                <img
                  alt="Iron Will"
                  src="mayhem-asset://augment-icons/1.png"
                  style="width: 100%; height: 100%; object-fit: cover;"
                />
              </div>
              Iron Will
            </div>
          </td>
          <td
            style="color: rgb(192, 192, 192); font-size: 12px; font-weight: 600;"
          >
            Silver
          </td>
          <td>
            12
          </td>
          <td>
            <div
              style="display: flex; align-items: center; gap: 8px;"
            >
              <div
                style="width: 60px; height: 6px; background: var(--bg-primary); border-radius: 3px; overflow: hidden;"
              >
                <div
                  style="width: 66.66666666666666%; height: 100%; background: var(--green); border-radius: 3px;"
                />
              </div>
              <span
                class="win"
              >
                67
                %
              </span>
            </div>
          </td>
          <td>
            700
            /min
          </td>
        </tr>
        <tr>
          <td>
            <div
              style="display: flex; align-items: center; gap: 8px;"
            >
              <div
                style="width: 24px; height: 24px; border-radius: 4px; border: 1px solid rgb(180, 75, 225); overflow: hidden; flex-shrink: 0; background: var(--bg-primary); display: inline-flex;"
                title="Prismatic Eye"
              >
                <img
                  alt="Prismatic Eye"
                  src="mayhem-asset://augment-icons/3.png"
                  style="width: 100%; height: 100%; object-fit: cover;"
                />
              </div>
              Prismatic Eye
            </div>
          </td>
          <td
            style="color: rgb(180, 75, 225); font-size: 12px; font-weight: 600;"
          >
            Prismatic
          </td>
          <td>
            9
          </td>
          <td>
            <div
              style="display: flex; align-items: center; gap: 8px;"
            >
              <div
                style="width: 60px; height: 6px; background: var(--bg-primary); border-radius: 3px; overflow: hidden;"
              >
                <div
                  style="width: 66.66666666666666%; height: 100%; background: var(--green); border-radius: 3px;"
                />
              </div>
              <span
                class="win"
              >
                67
                %
              </span>
            </div>
          </td>
          <td>
            500
            /min
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`AugmentTable > click Win Rate — reorders by win rate descending 1`] = `
<div>
  <div
    class="card"
  >
    <table>
      <thead>
        <tr>
          <th>
            Augment
          </th>
          <th>
            Rarity
          </th>
          <th
            style="cursor: pointer; user-select: none;"
          >
            Picks
          </th>
          <th
            style="cursor: pointer; user-select: none;"
          >
            Win Rate
             ▼
          </th>
          <th
            style="cursor: pointer; user-select: none;"
          >
            Avg DPM
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            <div
              style="display: flex; align-items: center; gap: 8px;"
            >
              <div
                style="width: 24px; height: 24px; border-radius: 4px; border: 1px solid rgb(192, 192, 192); overflow: hidden; flex-shrink: 0; background: var(--bg-primary); display: inline-flex;"
                title="Iron Will"
              >
                <img
                  alt="Iron Will"
                  src="mayhem-asset://augment-icons/1.png"
                  style="width: 100%; height: 100%; object-fit: cover;"
                />
              </div>
              Iron Will
            </div>
          </td>
          <td
            style="color: rgb(192, 192, 192); font-size: 12px; font-weight: 600;"
          >
            Silver
          </td>
          <td>
            12
          </td>
          <td>
            <div
              style="display: flex; align-items: center; gap: 8px;"
            >
              <div
                style="width: 60px; height: 6px; background: var(--bg-primary); border-radius: 3px; overflow: hidden;"
              >
                <div
                  style="width: 66.66666666666666%; height: 100%; background: var(--green); border-radius: 3px;"
                />
              </div>
              <span
                class="win"
              >
                67
                %
              </span>
            </div>
          </td>
          <td>
            700
            /min
          </td>
        </tr>
        <tr>
          <td>
            <div
              style="display: flex; align-items: center; gap: 8px;"
            >
              <div
                style="width: 24px; height: 24px; border-radius: 4px; border: 1px solid rgb(180, 75, 225); overflow: hidden; flex-shrink: 0; background: var(--bg-primary); display: inline-flex;"
                title="Prismatic Eye"
              >
                <img
                  alt="Prismatic Eye"
                  src="mayhem-asset://augment-icons/3.png"
                  style="width: 100%; height: 100%; object-fit: cover;"
                />
              </div>
              Prismatic Eye
            </div>
          </td>
          <td
            style="color: rgb(180, 75, 225); font-size: 12px; font-weight: 600;"
          >
            Prismatic
          </td>
          <td>
            9
          </td>
          <td>
            <div
              style="display: flex; align-items: center; gap: 8px;"
            >
              <div
                style="width: 60px; height: 6px; background: var(--bg-primary); border-radius: 3px; overflow: hidden;"
              >
                <div
                  style="width: 66.66666666666666%; height: 100%; background: var(--green); border-radius: 3px;"
                />
              </div>
              <span
                class="win"
              >
                67
                %
              </span>
            </div>
          </td>
          <td>
            500
            /min
          </td>
        </tr>
        <tr>
          <td>
            <div
              style="display: flex; align-items: center; gap: 8px;"
            >
              <div
                style="width: 24px; height: 24px; border-radius: 4px; border: 1px solid rgb(240, 180, 41); overflow: hidden; flex-shrink: 0; background: var(--bg-primary); display: inline-flex;"
                title="Gold Rush"
              >
                <img
                  alt="Gold Rush"
                  src="mayhem-asset://augment-icons/2.png"
                  style="width: 100%; height: 100%; object-fit: cover;"
                />
              </div>
              Gold Rush
            </div>
          </td>
          <td
            style="color: rgb(240, 180, 41); font-size: 12px; font-weight: 600;"
          >
            Gold
          </td>
          <td>
            6
          </td>
          <td>
            <div
              style="display: flex; align-items: center; gap: 8px;"
            >
              <div
                style="width: 60px; height: 6px; background: var(--bg-primary); border-radius: 3px; overflow: hidden;"
              >
                <div
                  style="width: 33.33333333333333%; height: 100%; background: var(--red); border-radius: 3px;"
                />
              </div>
              <span
                class="loss"
              >
                33
                %
              </span>
            </div>
          </td>
          <td>
            900
            /min
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`AugmentTable > default render — sorted by picks descending 1`] = `
<div>
  <div
    class="card"
  >
    <table>
      <thead>
        <tr>
          <th>
            Augment
          </th>
          <th>
            Rarity
          </th>
          <th
            style="cursor: pointer; user-select: none;"
          >
            Picks
             ▼
          </th>
          <th
            style="cursor: pointer; user-select: none;"
          >
            Win Rate
          </th>
          <th
            style="cursor: pointer; user-select: none;"
          >
            Avg DPM
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            <div
              style="display: flex; align-items: center; gap: 8px;"
            >
              <div
                style="width: 24px; height: 24px; border-radius: 4px; border: 1px solid rgb(192, 192, 192); overflow: hidden; flex-shrink: 0; background: var(--bg-primary); display: inline-flex;"
                title="Iron Will"
              >
                <img
                  alt="Iron Will"
                  src="mayhem-asset://augment-icons/1.png"
                  style="width: 100%; height: 100%; object-fit: cover;"
                />
              </div>
              Iron Will
            </div>
          </td>
          <td
            style="color: rgb(192, 192, 192); font-size: 12px; font-weight: 600;"
          >
            Silver
          </td>
          <td>
            12
          </td>
          <td>
            <div
              style="display: flex; align-items: center; gap: 8px;"
            >
              <div
                style="width: 60px; height: 6px; background: var(--bg-primary); border-radius: 3px; overflow: hidden;"
              >
                <div
                  style="width: 66.66666666666666%; height: 100%; background: var(--green); border-radius: 3px;"
                />
              </div>
              <span
                class="win"
              >
                67
                %
              </span>
            </div>
          </td>
          <td>
            700
            /min
          </td>
        </tr>
        <tr>
          <td>
            <div
              style="display: flex; align-items: center; gap: 8px;"
            >
              <div
                style="width: 24px; height: 24px; border-radius: 4px; border: 1px solid rgb(180, 75, 225); overflow: hidden; flex-shrink: 0; background: var(--bg-primary); display: inline-flex;"
                title="Prismatic Eye"
              >
                <img
                  alt="Prismatic Eye"
                  src="mayhem-asset://augment-icons/3.png"
                  style="width: 100%; height: 100%; object-fit: cover;"
                />
              </div>
              Prismatic Eye
            </div>
          </td>
          <td
            style="color: rgb(180, 75, 225); font-size: 12px; font-weight: 600;"
          >
            Prismatic
          </td>
          <td>
            9
          </td>
          <td>
            <div
              style="display: flex; align-items: center; gap: 8px;"
            >
              <div
                style="width: 60px; height: 6px; background: var(--bg-primary); border-radius: 3px; overflow: hidden;"
              >
                <div
                  style="width: 66.66666666666666%; height: 100%; background: var(--green); border-radius: 3px;"
                />
              </div>
              <span
                class="win"
              >
                67
                %
              </span>
            </div>
          </td>
          <td>
            500
            /min
          </td>
        </tr>
        <tr>
          <td>
            <div
              style="display: flex; align-items: center; gap: 8px;"
            >
              <div
                style="width: 24px; height: 24px; border-radius: 4px; border: 1px solid rgb(240, 180, 41); overflow: hidden; flex-shrink: 0; background: var(--bg-primary); display: inline-flex;"
                title="Gold Rush"
              >
                <img
                  alt="Gold Rush"
                  src="mayhem-asset://augment-icons/2.png"
                  style="width: 100%; height: 100%; object-fit: cover;"
                />
              </div>
              Gold Rush
            </div>
          </td>
          <td
            style="color: rgb(240, 180, 41); font-size: 12px; font-weight: 600;"
          >
            Gold
          </td>
          <td>
            6
          </td>
          <td>
            <div
              style="display: flex; align-items: center; gap: 8px;"
            >
              <div
                style="width: 60px; height: 6px; background: var(--bg-primary); border-radius: 3px; overflow: hidden;"
              >
                <div
                  style="width: 33.33333333333333%; height: 100%; background: var(--red); border-radius: 3px;"
                />
              </div>
              <span
                class="loss"
              >
                33
                %
              </span>
            </div>
          </td>
          <td>
            900
            /min
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`ChampionTable > click Avg DPM — reorders rows by DPM descending 1`] = `
<div>
  <div
    class="card"
  >
    <table>
      <thead>
        <tr>
          <th>
            Champion
          </th>
          <th
            style="cursor: pointer; user-select: none;"
          >
            Games
          </th>
          <th
            style="cursor: pointer; user-select: none;"
          >
            Win Rate
          </th>
          <th
            style="cursor: pointer; user-select: none;"
          >
            KDA
          </th>
          <th>
            K / D / A
          </th>
          <th
            style="cursor: pointer; user-select: none;"
          >
            Avg DPM
             ▼
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            <div
              style="display: flex; align-items: center; gap: 8px;"
            >
              <img
                alt="Lux"
                src="mayhem-asset://champion-icons/3.png"
                style="width: 28px; height: 28px; border-radius: 50%; border: 1px solid var(--border);"
              />
              Lux
            </div>
          </td>
          <td>
            8
          </td>
          <td>
            <div
              style="display: flex; align-items: center; gap: 8px;"
            >
              <div
                style="width: 60px; height: 6px; background: var(--bg-primary); border-radius: 3px; overflow: hidden;"
              >
                <div
                  style="width: 62.5%; height: 100%; background: var(--green); border-radius: 3px;"
                />
              </div>
              <span
                class="win"
              >
                63
                %
              </span>
            </div>
          </td>
          <td
            class="kda"
          >
            6.00
          </td>
          <td
            style="color: var(--text-secondary); font-size: 12px;"
          >
            3.8
             / 
            1.9
             / 
            7.5
          </td>
          <td>
            950
            /min
          </td>
        </tr>
        <tr>
          <td>
            <div
              style="display: flex; align-items: center; gap: 8px;"
            >
              <img
                alt="Annie"
                src="mayhem-asset://champion-icons/1.png"
                style="width: 28px; height: 28px; border-radius: 50%; border: 1px solid var(--border);"
              />
              Annie
            </div>
          </td>
          <td>
            10
          </td>
          <td>
            <div
              style="display: flex; align-items: center; gap: 8px;"
            >
              <div
                style="width: 60px; height: 6px; background: var(--bg-primary); border-radius: 3px; overflow: hidden;"
              >
                <div
                  style="width: 70%; height: 100%; background: var(--green); border-radius: 3px;"
                />
              </div>
              <span
                class="win"
              >
                70
                %
              </span>
            </div>
          </td>
          <td
            class="kda"
          >
            4.50
          </td>
          <td
            style="color: var(--text-secondary); font-size: 12px;"
          >
            5.0
             / 
            2.0
             / 
            4.0
          </td>
          <td>
            800
            /min
          </td>
        </tr>
        <tr>
          <td>
            <div
              style="display: flex; align-items: center; gap: 8px;"
            >
              <img
                alt="Teemo"
                src="mayhem-asset://champion-icons/2.png"
                style="width: 28px; height: 28px; border-radius: 50%; border: 1px solid var(--border);"
              />
              Teemo
            </div>
          </td>
          <td>
            5
          </td>
          <td>
            <div
              style="display: flex; align-items: center; gap: 8px;"
            >
              <div
                style="width: 60px; height: 6px; background: var(--bg-primary); border-radius: 3px; overflow: hidden;"
              >
                <div
                  style="width: 40%; height: 100%; background: var(--red); border-radius: 3px;"
                />
              </div>
              <span
                class="loss"
              >
                40
                %
              </span>
            </div>
          </td>
          <td
            class="kda"
          >
            1.20
          </td>
          <td
            style="color: var(--text-secondary); font-size: 12px;"
          >
            4.0
             / 
            5.0
             / 
            2.0
          </td>
          <td>
            600
            /min
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`ChampionTable > click Win Rate twice — shows ▲ (ascending) 1`] = `
<div>
  <div
    class="card"
  >
    <table>
      <thead>
        <tr>
          <th>
            Champion
          </th>
          <th
            style="cursor: pointer; user-select: none;"
          >
            Games
          </th>
          <th
            style="cursor: pointer; user-select: none;"
          >
            Win Rate
             ▲
          </th>
          <th
            style="cursor: pointer; user-select: none;"
          >
            KDA
          </th>
          <th>
            K / D / A
          </th>
          <th
            style="cursor: pointer; user-select: none;"
          >
            Avg DPM
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            <div
              style="display: flex; align-items: center; gap: 8px;"
            >
              <img
                alt="Teemo"
                src="mayhem-asset://champion-icons/2.png"
                style="width: 28px; height: 28px; border-radius: 50%; border: 1px solid var(--border);"
              />
              Teemo
            </div>
          </td>
          <td>
            5
          </td>
          <td>
            <div
              style="display: flex; align-items: center; gap: 8px;"
            >
              <div
                style="width: 60px; height: 6px; background: var(--bg-primary); border-radius: 3px; overflow: hidden;"
              >
                <div
                  style="width: 40%; height: 100%; background: var(--red); border-radius: 3px;"
                />
              </div>
              <span
                class="loss"
              >
                40
                %
              </span>
            </div>
          </td>
          <td
            class="kda"
          >
            1.20
          </td>
          <td
            style="color: var(--text-secondary); font-size: 12px;"
          >
            4.0
             / 
            5.0
             / 
            2.0
          </td>
          <td>
            600
            /min
          </td>
        </tr>
        <tr>
          <td>
            <div
              style="display: flex; align-items: center; gap: 8px;"
            >
              <img
                alt="Lux"
                src="mayhem-asset://champion-icons/3.png"
                style="width: 28px; height: 28px; border-radius: 50%; border: 1px solid var(--border);"
              />
              Lux
            </div>
          </td>
          <td>
            8
          </td>
          <td>
            <div
              style="display: flex; align-items: center; gap: 8px;"
            >
              <div
                style="width: 60px; height: 6px; background: var(--bg-primary); border-radius: 3px; overflow: hidden;"
              >
                <div
                  style="width: 62.5%; height: 100%; background: var(--green); border-radius: 3px;"
                />
              </div>
              <span
                class="win"
              >
                63
                %
              </span>
            </div>
          </td>
          <td
            class="kda"
          >
            6.00
          </td>
          <td
            style="color: var(--text-secondary); font-size: 12px;"
          >
            3.8
             / 
            1.9
             / 
            7.5
          </td>
          <td>
            950
            /min
          </td>
        </tr>
        <tr>
          <td>
            <div
              style="display: flex; align-items: center; gap: 8px;"
            >
              <img
                alt="Annie"
                src="mayhem-asset://champion-icons/1.png"
                style="width: 28px; height: 28px; border-radius: 50%; border: 1px solid var(--border);"
              />
              Annie
            </div>
          </td>
          <td>
            10
          </td>
          <td>
            <div
              style="display: flex; align-items: center; gap: 8px;"
            >
              <div
                style="width: 60px; height: 6px; background: var(--bg-primary); border-radius: 3px; overflow: hidden;"
              >
                <div
                  style="width: 70%; height: 100%; background: var(--green); border-radius: 3px;"
                />
              </div>
              <span
                class="win"
              >
                70
                %
              </span>
            </div>
          </td>
          <td
            class="kda"
          >
            4.50
          </td>
          <td
            style="color: var(--text-secondary); font-size: 12px;"
          >
            5.0
             / 
            2.0
             / 
            4.0
          </td>
          <td>
            800
            /min
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`ChampionTable > click Win Rate — reorders rows and shows ▼ on header 1`] = `
<div>
  <div
    class="card"
  >
    <table>
      <thead>
        <tr>
          <th>
            Champion
          </th>
          <th
            style="cursor: pointer; user-select: none;"
          >
            Games
          </th>
          <th
            style="cursor: pointer; user-select: none;"
          >
            Win Rate
             ▼
          </th>
          <th
            style="cursor: pointer; user-select: none;"
          >
            KDA
          </th>
          <th>
            K / D / A
          </th>
          <th
            style="cursor: pointer; user-select: none;"
          >
            Avg DPM
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            <div
              style="display: flex; align-items: center; gap: 8px;"
            >
              <img
                alt="Annie"
                src="mayhem-asset://champion-icons/1.png"
                style="width: 28px; height: 28px; border-radius: 50%; border: 1px solid var(--border);"
              />
              Annie
            </div>
          </td>
          <td>
            10
          </td>
          <td>
            <div
              style="display: flex; align-items: center; gap: 8px;"
            >
              <div
                style="width: 60px; height: 6px; background: var(--bg-primary); border-radius: 3px; overflow: hidden;"
              >
                <div
                  style="width: 70%; height: 100%; background: var(--green); border-radius: 3px;"
                />
              </div>
              <span
                class="win"
              >
                70
                %
              </span>
            </div>
          </td>
          <td
            class="kda"
          >
            4.50
          </td>
          <td
            style="color: var(--text-secondary); font-size: 12px;"
          >
            5.0
             / 
            2.0
             / 
            4.0
          </td>
          <td>
            800
            /min
          </td>
        </tr>
        <tr>
          <td>
            <div
              style="display: flex; align-items: center; gap: 8px;"
            >
              <img
                alt="Lux"
                src="mayhem-asset://champion-icons/3.png"
                style="width: 28px; height: 28px; border-radius: 50%; border: 1px solid var(--border);"
              />
              Lux
            </div>
          </td>
          <td>
            8
          </td>
          <td>
            <div
              style="display: flex; align-items: center; gap: 8px;"
            >
              <div
                style="width: 60px; height: 6px; background: var(--bg-primary); border-radius: 3px; overflow: hidden;"
              >
                <div
                  style="width: 62.5%; height: 100%; background: var(--green); border-radius: 3px;"
                />
              </div>
              <span
                class="win"
              >
                63
                %
              </span>
            </div>
          </td>
          <td
            class="kda"
          >
            6.00
          </td>
          <td
            style="color: var(--text-secondary); font-size: 12px;"
          >
            3.8
             / 
            1.9
             / 
            7.5
          </td>
          <td>
            950
            /min
          </td>
        </tr>
        <tr>
          <td>
            <div
              style="display: flex; align-items: center; gap: 8px;"
            >
              <img
                alt="Teemo"
                src="mayhem-asset://champion-icons/2.png"
                style="width: 28px; height: 28px; border-radius: 50%; border: 1px solid var(--border);"
              />
              Teemo
            </div>
          </td>
          <td>
            5
          </td>
          <td>
            <div
              style="display: flex; align-items: center; gap: 8px;"
            >
              <div
                style="width: 60px; height: 6px; background: var(--bg-primary); border-radius: 3px; overflow: hidden;"
              >
                <div
                  style="width: 40%; height: 100%; background: var(--red); border-radius: 3px;"
                />
              </div>
              <span
                class="loss"
              >
                40
                %
              </span>
            </div>
          </td>
          <td
            class="kda"
          >
            1.20
          </td>
          <td
            style="color: var(--text-secondary); font-size: 12px;"
          >
            4.0
             / 
            5.0
             / 
            2.0
          </td>
          <td>
            600
            /min
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`ChampionTable > default render — sorted by games descending 1`] = `
<div>
  <div
    class="card"
  >
    <table>
      <thead>
        <tr>
          <th>
            Champion
          </th>
          <th
            style="cursor: pointer; user-select: none;"
          >
            Games
             ▼
          </th>
          <th
            style="cursor: pointer; user-select: none;"
          >
            Win Rate
          </th>
          <th
            style="cursor: pointer; user-select: none;"
          >
            KDA
          </th>
          <th>
            K / D / A
          </th>
          <th
            style="cursor: pointer; user-select: none;"
          >
            Avg DPM
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            <div
              style="display: flex; align-items: center; gap: 8px;"
            >
              <img
                alt="Annie"
                src="mayhem-asset://champion-icons/1.png"
                style="width: 28px; height: 28px; border-radius: 50%; border: 1px solid var(--border);"
              />
              Annie
            </div>
          </td>
          <td>
            10
          </td>
          <td>
            <div
              style="display: flex; align-items: center; gap: 8px;"
            >
              <div
                style="width: 60px; height: 6px; background: var(--bg-primary); border-radius: 3px; overflow: hidden;"
              >
                <div
                  style="width: 70%; height: 100%; background: var(--green); border-radius: 3px;"
                />
              </div>
              <span
                class="win"
              >
                70
                %
              </span>
            </div>
          </td>
          <td
            class="kda"
          >
            4.50
          </td>
          <td
            style="color: var(--text-secondary); font-size: 12px;"
          >
            5.0
             / 
            2.0
             / 
            4.0
          </td>
          <td>
            800
            /min
          </td>
        </tr>
        <tr>
          <td>
            <div
              style="display: flex; align-items: center; gap: 8px;"
            >
              <img
                alt="Lux"
                src="mayhem-asset://champion-icons/3.png"
                style="width: 28px; height: 28px; border-radius: 50%; border: 1px solid var(--border);"
              />
              Lux
            </div>
          </td>
          <td>
            8
          </td>
          <td>
            <div
              style="display: flex; align-items: center; gap: 8px;"
            >
              <div
                style="width: 60px; height: 6px; background: var(--bg-primary); border-radius: 3px; overflow: hidden;"
              >
                <div
                  style="width: 62.5%; height: 100%; background: var(--green); border-radius: 3px;"
                />
              </div>
              <span
                class="win"
              >
                63
                %
              </span>
            </div>
          </td>
          <td
            class="kda"
          >
            6.00
          </td>
          <td
            style="color: var(--text-secondary); font-size: 12px;"
          >
            3.8
             / 
            1.9
             / 
            7.5
          </td>
          <td>
            950
            /min
          </td>
        </tr>
        <tr>
          <td>
            <div
              style="display: flex; align-items: center; gap: 8px;"
            >
              <img
                alt="Teemo"
                src="mayhem-asset://champion-icons/2.png"
                style="width: 28px; height: 28px; border-radius: 50%; border: 1px solid var(--border);"
              />
              Teemo
            </div>
          </td>
          <td>
            5
          </td>
          <td>
            <div
              style="display: flex; align-items: center; gap: 8px;"
            >
              <div
                style="width: 60px; height: 6px; background: var(--bg-primary); border-radius: 3px; overflow: hidden;"
              >
                <div
                  style="width: 40%; height: 100%; background: var(--red); border-radius: 3px;"
                />
              </div>
              <span
                class="loss"
              >
                40
                %
              </span>
            </div>
          </td>
          <td
            class="kda"
          >
            1.20
          </td>
          <td
            style="color: var(--text-secondary); font-size: 12px;"
          >
            4.0
             / 
            5.0
             / 
            2.0
          </td>
          <td>
            600
            /min
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
